fixed slow startup time.  changed BootstrapServer to use URI (from HttpClient) instead of URL, 'cause URL sucks.